--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <h1>404 NOT FOUND</h1>
       </header>
     <main class="main">
-        <secion class="img">
-            <img src="Scarecrow.png" alt="Scarecrow">
-        </secion>
+
+            <img class="img" src="Scarecrow.png" alt="Scarecrow">
         <div class="content">
           <h1 class="text">I have bad news for you</h1>
           <p>The page you are looking for might be removed or is temporarily unavailable</p>
