--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
             <img class="img" src="Scarecrow.png" alt="Scarecrow">
         <div class="content">
-          <h1 class="text">I have bad news for you</h1>
-          <p>The page you are looking for might be removed or is temporarily unavailable</p>
+          <h1 class="text">I have bad news <br> for you</h1>
+          <p>The page you are looking <br> for might be removed or is <br>temporarily unavailable</p>
           <button class="button">BACK TO HOMEPAGE</button>
         </div>
     </main>
